fix(security): 修复安全扫描缺陷